<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mlaboratory.justcall.MainActivity">

    <TextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_phone_number"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/edtTxtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_for_edittext_phone_number"
        android:inputType="phone" />

    <TextView
        android:id="@+id/txtDialTimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_dial_times"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/edtTxtDialTimes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:hint="@string/hint_for_edittext_dial_times"
        android:inputType="number" />

    <Button
        android:id="@+id/btnStartDial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="@string/button_start_dial"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnStopDial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_stop_dial"
        android:textAllCaps="false" />
</LinearLayout>
